welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var nbmonte=0
  var nbdes=0
  var last = num.length -1
  for (i <- 0 to last-1){
    if (num(i+1)<num(i)){
    	nbmonte=nbmonte+1
    }
  }
  for (i <- 0 to last-1){
    if (num(i+1)>num(i)){
    	nbdes=nbdes+1
      
    
  return (nbdes+nbmonte)/2
}